changing plugins