@@ -5,33 +5,25 @@
 	<groupId>automation-exercise</groupId>
 	<artifactId>automation-exercise</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	  <build>
-	 <pluginManagement>
-		 
-		 <plugins>
-			<plugin>
-	          <groupId>org.apache.maven.plugins</groupId>
-	          <artifactId>maven-compiler-plugin</artifactId>
-	          <version>3.11.0</version>
-	      </plugin>
-	        
-	         <plugin>
-		          <groupId>org.apache.maven.plugins</groupId>
-		          <artifactId>maven-surefire-plugin</artifactId>
-		          <version>3.2.2</version>
-		          <configuration>
-					  <suiteXmlFiles>
-						  <suiteXmlFile>testng.xml</suiteXmlFile>
-					  </suiteXmlFiles>
-				  </configuration>
-       		 </plugin>
-			 
-		 </plugins>
-		 
-	 </pluginManagement>
-	 
-	 
- </build>
+	<build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.11.0</version>
+      <configuration>
+        <source>17</source> <!-- or 21, match your JDK -->
+        <target>17</target> <!-- or 21, match your JDK -->
+        <compilerArgs>
+          <arg>--add-opens</arg>
+          <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+        </compilerArgs>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
